--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,10 @@
 # Este archivo .gitignore ha sido creado automáticamente por Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs/NumericOverflow.Bot/v15/sqlite3
+/.vs
+/*.user
+/NumericOverflow.Bot/obj
+/NumericOverflow.Bot/bin
+/NumericOverflow.Bot/*.user
+/NumericOverflow.Bot.Tests/obj
+/NumericOverflow.Bot.Tests/bin
