Resolve pending parameters Return date parameter in bag Add fake helper for models

--- a/NumericOverflow.Bot.Tests/NumericOverflow.Bot.Tests.csproj
+++ b/NumericOverflow.Bot.Tests/NumericOverflow.Bot.Tests.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\FakeModelsHelper.cs" />
     <Compile Include="Services\DateParameterBotTests.cs" />
     <Compile Include="Services\IntegrationTests.cs" />
     <Compile Include="Services\MenuBotTests.cs" />
