--- a/NumericOverflow.Bot.Sample/NumericOverflow.Bot.Sample.csproj
+++ b/NumericOverflow.Bot.Sample/NumericOverflow.Bot.Sample.csproj
@@ -6,10 +6,14 @@
     <Content Include="**\*.dothtml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Remove="Views\Chat.dothtml" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="dotvvm_serialized_config.json.tmp" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="Content\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="4.0.0" />
@@ -24,5 +28,10 @@
   <ItemGroup>
     <ProjectReference Include="..\NumericOverflow.Bot.Indexers\NumericOverflow.Bot.Indexers.csproj" />
     <ProjectReference Include="..\NumericOverflow.Bot\NumericOverflow.Bot.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Update="wwwroot/css\chat.css">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
